<?xml version="1.0"?>
<package format="2">
  <name>traversable_mapping</name>
  <version>2.0.0</version>
  <description>This package build a traversable maps in 2D. This algorithm takes into account the robot dimensions for mapping. Also, the nodes of this package subscribe to Point-Clouds so it is possible to use 3D LiDAR's and RGB-D cameras.</description>

  <author email="carlos.medina-sanchez@uni-due.de">Carlos Medina Sanchez</author> 
  <maintainer email="carlos.medina-sanchez@uni-due.de">Carlos Medina Sánchez</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
</package>
